--- a/less/styles.less
+++ b/less/styles.less
@@ -3,6 +3,7 @@
 	margin: 0px;
 	padding: 0px;
 	font-family: 'Roboto', sans-serif;
+
 }
 
 
@@ -50,11 +51,14 @@ div.backcontact{
 			transition: width 31s ease-out;
 			}
 				.search:focus {
-				width: 450px;
+				width: 350px;
 				}
 			
 		}
+
 }
+
+
 
 
 div.backmenu {
@@ -243,11 +247,14 @@ div.halfWindowOne {
 			h3 {
 			display: inline-block;
 			color: #666666;
+			clear: left;
 			}
 			a {
 			left: 0%;
 			color: #7c9c37;
 			text-decoration: none;
+			float: right;
+			
 			}
 			
 		}
@@ -256,13 +263,14 @@ div.halfWindowOne {
 div.halfWindowTwo {
 max-width: 1000px;
 margin: 0px auto;
-text-align: center;
+
 	img {
 		margin-bottom: 20px;
 	}
 	ul.secondul {
 	max-width: 500px;
 	text-align: justify;
+	float: left;
 		li {
 		max-height: 130px;
 		max-width: 250px;
@@ -271,7 +279,6 @@ text-align: center;
 		padding-right: 10px;
 		margin-bottom: 33px;
 		float: left;
-
 			h5 {
 			font-size: 14px;
 			color: #7c9c37;
@@ -287,18 +294,199 @@ text-align: center;
 			}
 		}
 	}
-	ul {
-	float: left;
+
+	ul {	
 		li {
 		list-style-type: none;
-		float: left;
 			img.profilePic {
 			padding-left: 10px;
+			float: left;
+			 &span a {
+			 	margin-left: 10px;
+			 }
 			}
 			img.profileTwo {
-				padding-left: 20px;
-				
+			margin-left: 20px;
 			}
 		}
 	}
+}
+
+div.nameProfile {
+	width: 1000px;
+		ul {
+			list-style-type: none;
+			li.nameProfileFirst {
+				margin-left: 10px;
+				display: inline-block;
+				float: left;
+			}
+			li.nameProfileSecond {
+				
+			}
+
+		}
+
+}
+
+div.footer {
+	background-color: #222222;
+	height: 330px;
+	margin-top: 50px;
+		div.footerul {
+			width: 1000px;
+			margin: 0px auto;
+			ul {
+			margin: 0px auto;
+			float: left;
+				li.firstliFooter {
+				width: 250px;
+				float: left;
+				list-style-type: none;
+				padding-left: 20px;	
+					img {
+					padding: 5px;
+   					border: 1px solid #333333;
+   					margin-bottom: 20px;
+					}
+					h4 {
+					font-size: 12px;
+					text-transform: uppercase;
+					color: #666666;
+					margin-top: 30px;
+					margin-bottom: 25px;
+					}
+					p {
+					font-size: 12px;
+					color: #666666;
+					margin-bottom: 15px;
+					}
+					a {
+					font-size: 12px;
+					color: #7c9c37;
+					}
+				}
+
+				li.secondliFooter {
+				width: 250px;
+				float: left;
+				list-style-type: none;
+				padding-left: 20px;
+					h4 {
+					font-size: 12px;
+					text-transform: uppercase;
+					color: #666666;
+					margin-top: 30px;
+					margin-bottom: 20px;
+					}
+					p {
+					font-size: 12px;
+					color: #666666;
+					margin-bottom: 15px;
+					}
+					a {
+					font-size: 12px;
+					color: #7c9c37;
+					text-decoration: none;
+					}
+						ul{
+							li {
+							border-bottom: 2px solid #3a3a3a;
+							list-style-type: none;
+							width: 210px;
+							padding-bottom: 5px;
+							
+								span.arrowsli {
+								color: #666666;
+								margin-right: 10px;
+								}
+							}
+							li:first-child {
+							border-bottom: none;
+							margin-bottom: -5px; 
+							}
+							
+						}
+				}
+
+				li.thirdliFooter {
+				width: 250px;
+				float: left;
+				list-style-type: none;
+				padding-left: 10px;
+				padding-right: 15px;
+					
+					h4 {
+					font-size: 12px;
+					text-transform: uppercase;
+					color: #666666;
+					margin-top: 30px;
+					margin-bottom: 20px;
+					}
+					span {
+					font-size: 14px;
+					
+					color: #666666;
+					}
+					p {
+					font-size: 12px;
+					color: #666666;
+						span.dateli {
+							font-size: 10px;
+						}
+					}
+					a {
+					font-size: 12px;
+					color: #7c9c37;
+					}
+					h5 {
+					font-size: 14px;
+					color: #666666;
+					margin-top: 25px;
+					}
+				}
+
+				li.fourthliFooter {
+				width: 250px;
+				float: left;
+				list-style-type: none;
+					
+					h4 {
+					font-size: 12px;
+					text-transform: uppercase;
+					color: #666666;
+					margin-top: 30px;
+					margin-bottom: 25px;
+
+					}
+					p {
+					font-size: 12px;
+					color: #666666;
+					}
+					a.maillinktwo {
+						text-decoration: none;
+					}
+
+					input {
+						padding: 10px 20px;
+						background-color: #353535;
+						border-radius: 5px;
+						border: none;
+						margin-bottom: 10px;
+						color: white;
+					}
+					a.submitButton {
+						background-color: #7c9c37;
+						color: white;
+						border-radius: 3px;
+						font-size: 14px;
+						text-decoration: none;
+						padding: 5px;
+						text-transform: uppercase;
+					}
+
+				}
+
+			}
+		}
 }
