--- a/less/styles.less
+++ b/less/styles.less
@@ -76,7 +76,6 @@ div.backmenu {
 			ul.menu {
 			color: #ffffff;
 			float: right;
-			
 				li {
 				font-size: 12px;
 				text-transform: uppercase;
@@ -220,7 +219,6 @@ div.fourItems {
 			}
 
 		}
-
 }
 
 
@@ -263,9 +261,8 @@ div.halfWindowOne {
 div.halfWindowTwo {
 max-width: 1000px;
 margin: 0px auto;
-
 	img {
-		margin-bottom: 20px;
+	margin-bottom: 20px;
 	}
 	ul.secondul {
 	max-width: 500px;
@@ -302,7 +299,7 @@ margin: 0px auto;
 			padding-left: 10px;
 			float: left;
 			 &span a {
-			 	margin-left: 10px;
+			 margin-left: 10px;
 			 }
 			}
 			img.profileTwo {
@@ -317,16 +314,14 @@ div.nameProfile {
 		ul {
 			list-style-type: none;
 			li.nameProfileFirst {
-				margin-left: 10px;
-				display: inline-block;
-				float: left;
+			margin-left: 10px;
+			display: inline-block;
+			float: left;
 			}
 			li.nameProfileSecond {
-				
 			}
 
 		}
-
 }
 
 div.footer {
@@ -395,7 +390,6 @@ div.footer {
 							list-style-type: none;
 							width: 210px;
 							padding-bottom: 5px;
-							
 								span.arrowsli {
 								color: #666666;
 								margin-right: 10px;
@@ -405,7 +399,6 @@ div.footer {
 							border-bottom: none;
 							margin-bottom: -5px; 
 							}
-							
 						}
 				}
 
@@ -415,7 +408,6 @@ div.footer {
 				list-style-type: none;
 				padding-left: 10px;
 				padding-right: 15px;
-					
 					h4 {
 					font-size: 12px;
 					text-transform: uppercase;
@@ -425,14 +417,13 @@ div.footer {
 					}
 					span {
 					font-size: 14px;
-					
 					color: #666666;
 					}
 					p {
 					font-size: 12px;
 					color: #666666;
 						span.dateli {
-							font-size: 10px;
+						font-size: 10px;
 						}
 					}
 					a {
@@ -450,39 +441,37 @@ div.footer {
 				width: 250px;
 				float: left;
 				list-style-type: none;
-					
 					h4 {
 					font-size: 12px;
 					text-transform: uppercase;
 					color: #666666;
 					margin-top: 30px;
 					margin-bottom: 25px;
-
 					}
 					p {
 					font-size: 12px;
 					color: #666666;
 					}
 					a.maillinktwo {
-						text-decoration: none;
+					text-decoration: none;
 					}
-
 					input {
-						padding: 10px 20px;
-						background-color: #353535;
-						border-radius: 5px;
-						border: none;
-						margin-bottom: 10px;
-						color: white;
+					padding: 10px;
+					padding-right: 60px;
+					background-color: #353535;
+					border-radius: 5px;
+					border: none;
+					margin-bottom: 10px;
+					color: white;
 					}
 					a.submitButton {
-						background-color: #7c9c37;
-						color: white;
-						border-radius: 3px;
-						font-size: 14px;
-						text-decoration: none;
-						padding: 5px;
-						text-transform: uppercase;
+					background-color: #7c9c37;
+					color: white;
+					border-radius: 3px;
+					font-size: 14px;
+					text-decoration: none;
+					padding: 5px;
+					text-transform: uppercase;
 					}
 
 				}
