--- a/less/styles.less
+++ b/less/styles.less
@@ -416,7 +416,7 @@ div.copyright {
 	border-top: 1px solid #3a3a3a;
 	text-align: center;
 	padding-top: 15px;
-		span {
+		small {
 			font-size: 12px;
 			color: #666666;
 		}
