--- a/less/styles.less
+++ b/less/styles.less
@@ -20,6 +20,7 @@ div.backcontact{
 			}
 			a {
 			text-decoration: none !important;
+			color: #000000;
 			}
 			#searchIcon {
 		    position: relative;
@@ -403,6 +404,9 @@ div.footer {
 					text-decoration: none;
 					padding: 5px;
 					text-transform: uppercase;
+					}
+					a.maillinktwo {
+						color: #7c9c37;
 					}
 				}
 
